--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ env:
         - SUNPY_VERSION=stable
         - MAIN_CMD='python setup.py'
         - SETUP_CMD='test'
-        - PIP_DEPENDENCIES=''
+        - PIP_DEPENDENCIES='git+https://github.com/sunpy/sunpy-sphinx-theme'
         - EVENT_TYPE='pull_request push'
 
         
