--- a/.rtd-environment.yml
+++ b/.rtd-environment.yml
@@ -9,5 +9,16 @@ dependencies:
     - Cython
     - matplotlib
     - numpy
+    - openjpeg 
+    - jinja2
+    - scipy
+    - requests
+    - beautifulsoup4
+    - sqlalchemy
+    - scikit-image
+    - pandas
+    - nomkl
+    - glymur
+    - suds-jurko
     - pip:
       - sunpy==0.8.rc1
