--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,7 @@ env:
         
         # List other runtime dependencies for the package that are available as
         # conda packages here.
-        - CONDA_DEPENDENCIES=''
+        - CONDA_DEPENDENCIES='openjpeg Cython jinja2 scipy matplotlib mock requests beautifulsoup4 sqlalchemy scikit-image pytest-mock pandas nomkl pytest-cov coverage glymur suds-jurko'
         
         # List other runtime dependencies for the package that are available as
         # pip packages here.
