--- a/.travis.yml
+++ b/.travis.yml
@@ -42,7 +42,7 @@ env:
         
         # List other runtime dependencies for the package that are available as
         # pip packages here.
-        - PIP_DEPENDENCIES='sunpy-sphinx-theme'
+        - PIP_DEPENDENCIES='sunpy-sphinx-theme pytest-astropy'
 
         # Conda packages for affiliated packages are hosted in channel
         # "astropy" while builds for astropy LTS with recent numpy versions
