--- a/.pep8speaks.yml
+++ b/.pep8speaks.yml
@@ -1,9 +1,14 @@
+scanner:
+    diff_only: True  # If True, errors caused by only the patch are shown
+
 pycodestyle:
-  max-line-length: 100 # Default is 79 in PEP8
+    max-line-length: 100  # Default is 79 in PEP8
 
 exclude:
-  - setup.py
-  - ez_setup.py
-  - ah_bootstrap.py
-  - astropy_helpers/
-  - docs/conf.py
+    - setup.py
+    - ez_setup.py
+    - ah_bootstrap.py
+    - astropy_helpers/
+    - docs/conf.py
+
+descending_issues_order: True # If True, PEP8 issues in message will be displayed in descending order of line numbers in the file
