Fix up things based on comments

--- a/setup.cfg
+++ b/setup.cfg
@@ -38,7 +38,7 @@ exclude = extern,sphinx,*parsetab.py
 
 [metadata]
 package_name = ndcube
-description = A base package for multi-dimensional contiguious and non-contiguious spatially aware arrays.
+description = A base package for multi-dimensional contiguious and non-contiguious coordinate aware arrays.
 author = SunPy Developers
 author_email = sunpy@googlegroups.com
 license = BSD-2-Clause
