--- a/setup.cfg
+++ b/setup.cfg
@@ -46,6 +46,6 @@ url = http://sunpy.org
 edit_on_github = True
 github_project = sunpy/ndcube
 # version should be PEP386 compatible (http://www.python.org/dev/peps/pep-0386)
-version = 1.0.dev
-install_requires=sunpy>=0.8 astropy matplotlib
+version = 1.0
+install_requires=sunpy>=0.8 astropy matplotlib pytest
 
