Add matplotlib backend to travis for testing plots.

--- a/.travis.yml
+++ b/.travis.yml
@@ -54,6 +54,9 @@ matrix:
 
     include:
 
+        # Add a matploblib backend for generating plots in tests.
+	- env: MPLBACKEND='Agg' 
+
         # Do a basic test.
         - os: linux
           stage: Initial tests
