--- a/.travis.yml
+++ b/.travis.yml
@@ -54,8 +54,8 @@ matrix:
 
     include:
 
-        # Add a matploblib backend for generating plots in tests.
-	- env: MPLBACKEND='Agg' 
+        # Add a matplotlib backend for generating plots in tests.
+        - env: MPLBACKEND='Agg'
 
         # Do a basic test.
         - os: linux
@@ -102,8 +102,13 @@ install:
     - git clone git://github.com/astropy/ci-helpers.git
     - source ci-helpers/travis/setup_conda.sh
 
+before_script:
+    - "export DISPLAY=:99.0"
+    - "sh -e /etc/init.d/xvfb start"
+    - sleep 3 # give xvfb some time to start
+
 script:
-   - $MAIN_CMD $SETUP_CMD
+    - $MAIN_CMD $SETUP_CMD
 
 after_success:
-   - if [[ $SETUP_CMD = *"cov"* ]]; then pip install codecov; codecov; fi
+    - if [[ $SETUP_CMD = *"cov"* ]]; then pip install codecov; codecov; fi
