--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ env:
         - SETUP_CMD='test --coverage'
         - EVENT_TYPE='pull_request push cron'
         - CONDA_DEPENDENCIES='openjpeg Cython jinja2 scipy matplotlib mock requests beautifulsoup4 sqlalchemy scikit-image pytest-mock pandas nomkl pytest-cov coverage glymur suds-jurko sphinx'
-        - PIP_DEPENDENCIES='sunpy-sphinx-theme pytest-astropy'
+        - PIP_DEPENDENCIES='sunpy-sphinx-theme pytest-astropy sphinx-astropy'
         - CONDA_CHANNELS='sunpy'
         # Add a matplotlib backend for generating plots in tests.
         - MPLBACKEND='Agg'
