--- a/setup.cfg
+++ b/setup.cfg
@@ -1,25 +1,54 @@
-[build_sphinx]
-source-dir = docs
-build-dir = docs/_build
-all_files = 1
+[metadata]
+name = ndcube
+package_name = ndcube
+description = A package for multi-dimensional contiguious and non-contiguious coordinate aware arrays.
+long_descripton = file: README.rst
+author = The SunPy Community
+author_email = sunpy@googlegroups.com
+license = BSD 2-Clause
+url = https://sunpy.org
+edit_on_github = True
+github_project = sunpy/ndcube
+version = 1.1.dev
+classifiers =
+  'Programming Language :: Python'
+  'Programming Language :: Python :: 3'
+  'Programming Language :: Python :: 3.6'
+  'Programming Language :: Python :: 3.7'
+
+[options]
+python_requires = >=3.6
+packages = find:
+include_package_data = True
+install_requires =
+  sunpy>=0.9
+  astropy>=3.1
+  matplotlib>=2
+
+[options.extras_require]
+tests =
+  pytest-astropy
+docs =
+  sphinx
+  sunpy-sphinx-theme
+  sphinx-astropy
+
+[ah_bootstrap]
+auto_use = True
 
 [build_docs]
 source-dir = docs
 build-dir = docs/_build
 all_files = 1
 
-[upload_docs]
-upload-dir = docs/_build/html
-show-response = 1
-
 [tool:pytest]
 minversion = 3.0
-norecursedirs = build docs/_build
-doctest_plus = disabled
-addopts = -p no:warnings
-
-[ah_bootstrap]
-auto_use = True
+testpaths = "ndcube" "docs"
+# Skip sunpy/data to prevent importing the sample data (there are no tests in that dir anyway)
+norecursedirs = ".tox" "build" "docs[\/]_build" "docs[\/]generated" "*.egg-info" "astropy_helpers" "examples"
+doctest_plus = enabled
+doctest_optionflags = NORMALIZE_WHITESPACE FLOAT_CMP ELLIPSIS
+addopts = -p no:warnings --doctest-rst
 
 [pycodestyle]
 # E101 - mix of tabs and spaces
@@ -36,16 +65,21 @@ auto_use = True
 select = E101,W191,W291,W292,W293,W391,E111,E112,E113,E901,E902
 exclude = extern,sphinx,*parsetab.py
 
-[metadata]
-package_name = ndcube
-description = A base package for multi-dimensional contiguious and non-contiguious coordinate aware arrays.
-author = SunPy Developers
-author_email = sunpy@googlegroups.com
-license = BSD-2-Clause
-url = http://sunpy.org
-edit_on_github = True
-github_project = sunpy/ndcube
-# version should be PEP386 compatible (http://www.python.org/dev/peps/pep-0386)
-version = 1.1
-install_requires=sunpy>=0.9 astropy matplotlib pytest
+[flake8]
+max-line-length = 100
 
+[isort]
+line_length = 100
+not_skip = __init__.py
+sections = STDLIB, THIRDPARTY, ASTROPY, FIRSTPARTY, LOCALFOLDER
+default_section = THIRDPARTY
+known_first_party = ndcube
+known_astropy = astropy, asdf, sunpy
+multi_line_output = 0
+balanced_wrapping = True
+include_trailing_comma = false
+length_sort = False
+length_sort_stdlib = True
+
+[coverage:run]
+source = ndcube
