--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,28 +14,28 @@ jobs:
   parameters:
     name: Linux_36_offline
     os: linux
-    tox: py36-offline
+    tox: py36-offline --
 
 - template: azure-templates.yml
   parameters:
     name: pycodestyle
     os: linux
-    tox: pycodestyle
+    tox: pycodestyle --
 
 - template: azure-templates.yml
   parameters:
     name: macOS_37_offline
     os: macos
-    tox: py37-offline
+    tox: py37-offline --
 
 - template: azure-templates.yml
   parameters:
     name: Windows_36_offline
     os: windows
-    tox: py36-offline
+    tox: py36-offline --
 
 - template: azure-templates.yml
   parameters:
     name: Linux_36_Conda_offline
     os: linux
-    tox: conda
+    tox: conda --
