--- a/setup.cfg
+++ b/setup.cfg
@@ -28,10 +28,14 @@ install_requires =
 [options.extras_require]
 tests =
   pytest-astropy
+  pytest-cov
+  pytest-mock
+  tox
 docs =
   sphinx
   sunpy-sphinx-theme
   sphinx-astropy
+  towncrier
 
 [ah_bootstrap]
 auto_use = True
@@ -82,4 +86,28 @@ length_sort = False
 length_sort_stdlib = True
 
 [coverage:run]
-source = ndcube
+omit =
+  ndcube/__init__*
+  ndcube/_sunpy_init.py
+  ndcube/cython_version*
+  ndcube/extern/*
+  ndcube/version*
+  */ndcube/__init__*
+  */ndcube/_sunpy_init.py
+  */ndcube/cython_version*
+  */ndcube/extern/*
+  */ndcube/version*
+
+[coverage:report]
+exclude_lines =
+  # Have to re-enable the standard pragma
+  pragma: no cover
+  # Don't complain about packages we have installed
+  except ImportError
+  # Don't complain if tests don't hit assertions
+  raise AssertionError
+  raise NotImplementedError
+  # Don't complain about script hooks
+  def main\(.*\):
+  # Ignore branches that don't pertain to this version of Python
+  pragma: py{ignore_python_version}
