--- a/.travis.yml
+++ b/.travis.yml
@@ -18,15 +18,15 @@ matrix:
       name: "macOS 3.7 (py37-offline)"
       env: TOX_ENV='py37-offline'
 
-    - name: "3.6 offline (py36-offline)"
-      env: TOX_ENV='py36-offline'
-
     - name: "3.7 offline (py37-offline)"
       env: TOX_ENV='py37-offline'
 
     - name: "AstroPy dev (py37-astropydev)"
+      env: TOX_ENV='py37-astropydev'
+
+    - name: "SunPY dev (py37-sunpydev)"
       env:
-        - TOX_ENV='py37-astropydev'
+        - TOX_ENV='py37-sunpydev'
       addons:
         apt:
           packages:
@@ -41,18 +41,12 @@ matrix:
             - libatlas-base-dev
       env: TOX_ENV='py37-numpydev'
 
-  allow_failures:
-    - name: "3.7 online (py37-online)"
-      env:
-        - TOX_ENV='py37-online'
-        - TOX_ARG='-- -n=8'
-
 before_install:
   - git clone --depth 1 git://github.com/astropy/ci-helpers.git
   # We do not want to create the test env
   - echo "" > ci-helpers/travis/setup_dependencies_common.sh
   - source ci-helpers/travis/setup_conda.sh
-  - pip install tox tox-conda
+  - pip install tox
 
 script:
   - tox -e $TOX_ENV $TOX_ARG
@@ -61,6 +55,6 @@ script:
 
 after_failure:
   # Send a nice matrix notification if the Astropy-dev job fails
-  - NOTIF_TEXT='Build '$TRAVIS_BUILD_NUMBER' (Astropy-dev) Failed:'$TRAVIS_BUILD_WEB_URL
+  - NOTIF_TEXT='Build '$TRAVIS_BUILD_NUMBER' (sunpy-dev) Failed:'$TRAVIS_BUILD_WEB_URL
   - AVATAR_URL='https://s3-eu-west-1.amazonaws.com/cadair.com/Tessa-pride.png'
-  - if [[ -n "$NOTIFURL" && $TOX_ENV == *astropydev* ]]; then http --verify=no POST $NOTIFURL displayName="Travis Bot" avatarUrl="$AVATAR_URL" text="$NOTIF_TEXT"; fi
+  - if [[ -n "$NOTIFURL" && $TOX_ENV == *sunpydev* ]]; then http --verify=no POST $NOTIFURL displayName="Travis Bot" avatarUrl="$AVATAR_URL" text="$NOTIF_TEXT"; fi
