--- a/tox.ini
+++ b/tox.ini
@@ -1,40 +1,42 @@
 [tox]
-envlist = py{36,37}-{offline,astropydev,numpydev,build_docs},conda,pycodestyle
+envlist = py{36,37}-{offline,astropydev,numpydev,sunpydev},build_docs,conda,pycodestyle
 
 [testenv]
-isolated_build=true
+changedir = tmp
 setenv =
     MPLBACKEND = agg
     COLUMNS = 180
+    PYTEST_COMMAND = pytest --pyargs ndcube --cov=ndcube --cov-config={toxinidir}/setup.cfg --verbose --durations=25
+extras = dev
 deps =
+    sunpydev: git+git://github.com/sunpy/sunpy
     astropydev,numpydev: cython
     numpydev: git+git://github.com/numpy/numpy
-    offline,astropydev: numpy
     astropydev: git+git://github.com/astropy/astropy
-    offline,numpydev: astropy
-    matplotlib
-    sunpy
-    pytest-astropy
-    pytest-cov
-    build_docs: sphinx
-    build_docs: sphinx-astropy
-    build_docs: sunpy-sphinx-theme
-    pycodestyle: pycodestyle
 commands =
-    offline,astropydev,numpydev: pytest --cov {posargs}
-    build_docs: sphinx-build docs docs/_build/html -b html
-    pycodestyle: pycodestyle ndcube --count
+    offline,astropydev,numpydev,sunpydev: {env:PYTEST_COMMAND} {posargs}
+
+[testenv:pycodestyle]
+changedir = {toxinidir}
+basepython = python3.7
+deps =
+    pycodestyle
+commands = pycodestyle ndcube --count
+
+[testenv:build_docs]
+basepython = python3.7
+changedir = {toxinidir}
+extras = dev
+commands = sphinx-build docs docs/_build/html -W -b html
 
 # This env requires tox-conda.
 [testenv:conda]
 basepython = python3.6
-setenv =
-    {[testenv]setenv}
+extras =
 deps =
 conda_deps =
     sunpy
     pytest-astropy
     pytest-cov
-conda_channels = conda-forge
-commands =
-    pytest --cov {posargs}
+conda_channels = sunpy
+commands = {env:PYTEST_COMMAND} {posargs}
