Corrected url for tox

--- a/tox.ini
+++ b/tox.ini
@@ -9,10 +9,10 @@ setenv =
     PYTEST_COMMAND = pytest --pyargs ndcube --cov=ndcube --cov-config={toxinidir}/setup.cfg --verbose --durations=25
 extras = dev
 deps =
-    sunpydev: git+git://github.com/sunpy/sunpy
+    sunpydev: git+https://github.com/sunpy/sunpy
     astropydev,numpydev: cython
-    numpydev: git+git://github.com/numpy/numpy
-    astropydev: git+git://github.com/astropy/astropy
+    numpydev: git+https://github.com/numpy/numpy
+    astropydev: git+https://github.com/astropy/astropy
 commands =
     offline,astropydev,numpydev,sunpydev: {env:PYTEST_COMMAND} {posargs}
 
