--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{36,37}-{offline,astropydev,numpydev,sunpydev},build_docs,conda,pycodestyle
+envlist = py{36,37}-{offline,astropydev,numpydev,sunpydev,sunpyold},build_docs,conda,pycodestyle
 
 [testenv]
 setenv =
@@ -8,12 +8,13 @@ setenv =
     PYTEST_COMMAND = pytest --cov=ndcube --cov-config={toxinidir}/setup.cfg --verbose --durations=25
 extras = dev
 deps =
+    sunpyold: sunpy<1
     sunpydev: git+git://github.com/sunpy/sunpy
     astropydev,numpydev: cython
     numpydev: git+git://github.com/numpy/numpy
     astropydev: git+git://github.com/astropy/astropy
 commands =
-    offline,astropydev,numpydev,sunpydev: {env:PYTEST_COMMAND} {posargs}
+    offline,astropydev,numpydev,sunpydev,sunpyold: {env:PYTEST_COMMAND} {posargs}
 
 [testenv:pycodestyle]
 basepython = python3.7
