--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,9 +6,17 @@ merge-check: &merge-check
   name: Check if we need to merge upstream master
   command: |
     if [[ -n "${CIRCLE_PR_NUMBER}" ]]; then
+      git fetch origin --tags
       git fetch origin +refs/pull/$CIRCLE_PR_NUMBER/merge:pr/$CIRCLE_PR_NUMBER/merge
       git checkout -qf pr/$CIRCLE_PR_NUMBER/merge
     fi
+
+permission-run: &permission-run
+  name: Fix permssions for installing
+  command: |
+    sudo chown -R circleci:circleci /usr/local/bin
+    sudo chown -R circleci:circleci /usr/local/lib/python3.7/site-packages
+    sudo chown -R circleci:circleci /usr/local/share/
 
 apt-run: &apt-install
   name: Install apt packages
@@ -16,10 +24,21 @@ apt-run: &apt-install
     apt update
     apt install -y graphviz build-essential
 
+sudo-apt-run: &sudo-apt-install
+  name: Install apt packages
+  command: |
+    sudo apt update
+    sudo apt install -y graphviz build-essential
+
 tox-install: &tox-install
   name: Install Tox
   command: |
     pip install tox
+
+tox-conda-install: &tox-conda-install
+  name: Install Tox-Conda
+  command: |
+    pip install tox-conda
 
 version: 2
 jobs:
@@ -41,30 +60,42 @@ jobs:
       - run: *merge-check
       - run: python setup.py egg_info
 
-  pip-install:
+  twine-check:
     docker:
-      - image: continuumio/miniconda3
+      - image: circleci/python:3.7
     steps:
       - checkout
       - run: *skip-check
       - run: *merge-check
-      - run: *apt-install
-      - run:
-          name: Update pip
-          command: pip install -U pip
-      - run:
-          name: Install ndcube
-          command: pip install --progress-bar off -e .[all,dev]
+      - run: *permission-run
+      - run: python setup.py sdist
+      - run: python -m pip install -U --user --force-reinstall twine
+      - run: python -m twine check dist/*
+
+  pip-install:
+    docker:
+      - image: circleci/python:3.7
+    steps:
+      - checkout
+      - run: *skip-check
+      - run: *merge-check
+      - run: *permission-run
+      - run: *sudo-apt-install
+      - run: pip install -U pip
+      - run: pip install --progress-bar off .[all,dev]
+      - run: pip install -e .[all,dev]
+      - run: python setup.py develop
 
   html-docs:
     docker:
-      - image: continuumio/miniconda3
+      - image: circleci/python:3.7
     steps:
       - checkout
       - run: *skip-check
       - run: *merge-check
-      - run: *apt-install
-      - run: *tox-install
+      - run: *permission-run
+      - run: *sudo-apt-install
+      - run: pip install -U tox
       - run: tox -e build_docs
       - store_artifacts:
           path: docs/_build/html
@@ -79,6 +110,10 @@ workflows:
     jobs:
       - egg-info-36
       - egg-info-37
+
+  twine-check:
+    jobs:
+      - twine-check
 
   pip-install:
     jobs:
