--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,11 +1,9 @@
 include README.rst
-include CHANGES.rst
-include LICENSE.rst
+include CHANGELOG.rst
 
-include ez_setup.py
 include ah_bootstrap.py
 include setup.cfg
-include ndcube/tests/coveragerc
+include pyproject.toml
 
 recursive-include ndcube *.pyx *.c *.pxd
 recursive-include docs *
@@ -27,10 +25,9 @@ include astropy_helpers/CHANGES.rst
 include astropy_helpers/LICENSE.rst
 recursive-include astropy_helpers/licenses *
 
-include astropy_helpers/ez_setup.py
 include astropy_helpers/ah_bootstrap.py
 
-recursive-include astropy_helpers/astropy_helpers *.py *.pyx *.c *.h
+recursive-include astropy_helpers/astropy_helpers *.py *.pyx *.c *.h *.rst
 recursive-include astropy_helpers/astropy_helpers.egg-info *
 # include the sphinx stuff with "*" because there are css/html/rst/etc.
 recursive-include astropy_helpers/astropy_helpers/sphinx *
