--- a/tox.ini
+++ b/tox.ini
@@ -1,41 +1,28 @@
 [tox]
-envlist = py{36,37}-{offline,astropydev,numpydev,sunpydev,sunpyold},build_docs,conda,pycodestyle
+envlist = py{36,37}-{offline,online,astropydev,numpydev,sunpydev},build_docs
+isolated_build = False
 
 [testenv]
+
 setenv =
     MPLBACKEND = agg
     COLUMNS = 180
-    PYTEST_COMMAND = pytest --cov=ndcube --cov-config={toxinidir}/setup.cfg --verbose --durations=25
-extras = dev
-deps =
-    sunpyold: sunpy<1
-    sunpydev: git+git://github.com/sunpy/sunpy
-    astropydev,numpydev: cython
-    numpydev: git+git://github.com/numpy/numpy
-    astropydev: git+git://github.com/astropy/astropy
-commands =
-    offline,astropydev,numpydev,sunpydev,sunpyold: {env:PYTEST_COMMAND} {posargs}
 
-[testenv:pycodestyle]
-basepython = python3.7
+    PYTEST_COMMAND = pytest --cov=ndcube --cov-config={toxinidir}/setup.cfg --verbose -m "not figure" --durations=25
+    
+
+extras = all,tests
 deps =
-    pycodestyle
-commands = pycodestyle ndcube --count
+    sunpydev: git+https://github.com/sunpy/sunpy
+    astropydev,numpydev: cython
+    numpydev: git+https://github.com/numpy/numpy
+    astropydev: git+https://github.com/astropy/astropy
+    pytest-cov
+commands =
+    offline,astropydev,numpydev,sunpydev: {env:PYTEST_COMMAND} {posargs}
+    online: {env:PYTEST_COMMAND} --remote-data=any {posargs} {toxinidir}/docs
 
 [testenv:build_docs]
 basepython = python3.7
-extras = dev
+extras = all,docs
 commands = sphinx-build docs docs/_build/html -W -b html
-
-# This env requires tox-conda.
-[testenv:conda]
-basepython = python3.6
-extras =
-deps =
-conda_deps =
-    sunpy
-    pytest<5.1
-    pytest-astropy
-    pytest-cov
-conda_channels = sunpy
-commands = {env:PYTEST_COMMAND} {posargs}
