--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@ long_description = file: README.rst
 license = BSD 2-Clause
 url = http://docs.sunpy.org/projects/ndcube/
 edit_on_github = True
-github_project = sunpy/github
+github_project = sunpy/ndcube
 python_requires = ">=3.6"
 
 [options]
