--- a/tox.ini
+++ b/tox.ini
@@ -1,16 +1,12 @@
 [tox]
-envlist = py{36,37}-{offline,online,astropydev,numpydev,sunpydev},build_docs
-isolated_build = False
+envlist = py{36,37}-{offline,online,astropydev,numpydev,sunpydev},build_docs,pycodestyle
+isolated_build = True
 
 [testenv]
-
 setenv =
     MPLBACKEND = agg
     COLUMNS = 180
-
     PYTEST_COMMAND = pytest --cov=ndcube --cov-config={toxinidir}/setup.cfg --verbose -m "not figure" --durations=25
-    
-
 extras = all,tests
 deps =
     sunpydev: git+https://github.com/sunpy/sunpy
@@ -21,6 +17,12 @@ deps =
 commands =
     offline,astropydev,numpydev,sunpydev: {env:PYTEST_COMMAND} {posargs}
     online: {env:PYTEST_COMMAND} --remote-data=any {posargs} {toxinidir}/docs
+
+[testenv:pycodestyle]
+basepython = python3.7
+deps =
+    pycodestyle
+commands = pycodestyle ndcube --count
 
 [testenv:build_docs]
 basepython = python3.7
