--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -7,3 +7,5 @@ python:
       - requirements: docs/rtd_requirements.txt
       - method: pip
         path: .
+        extra_requirements:
+           - dev
