--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@ isolated_build = True
 setenv =
     MPLBACKEND = agg
     COLUMNS = 180
-    PYTEST_COMMAND = pytest --cov=ndcube --cov-config={toxinidir}/setup.cfg --verbose -m "not figure" --durations=25
+    PYTEST_COMMAND = pytest --cov=ndcube --cov-config={toxinidir}/setup.cfg --verbose -m "not figure" {toxinidir}/docs
 extras = all,tests
 deps =
     sunpydev: git+https://github.com/sunpy/sunpy
@@ -16,7 +16,7 @@ deps =
     pytest-cov
 commands =
     offline,astropydev,numpydev,sunpydev: {env:PYTEST_COMMAND} {posargs}
-    online: {env:PYTEST_COMMAND} --remote-data=any {posargs} {toxinidir}/docs
+    online: {env:PYTEST_COMMAND} --remote-data=any {posargs}
 
 [testenv:pycodestyle]
 basepython = python3.7
@@ -25,6 +25,8 @@ deps =
 commands = pycodestyle ndcube --count
 
 [testenv:build_docs]
+setenv =
+    HOME = {envtmpdir}
 basepython = python3.7
 extras = all,docs
 commands = sphinx-build docs docs/_build/html -W -b html
