--- a/setup.cfg
+++ b/setup.cfg
@@ -53,12 +53,12 @@ upload-dir = docs/_build/html
 show-response = 1
 
 [tool:pytest]
-minversion = 3.0
+minversion = 3.1
 testpaths = "ndcube" "docs"
 norecursedirs = ".tox" "build" "docs[\/]_build" "docs[\/]generated" "*.egg-info" "astropy_helpers" "examples"
 doctest_plus = enabled
 doctest_optionflags = NORMALIZE_WHITESPACE FLOAT_CMP ELLIPSIS
-addopts = -p no:warnings
+addopts = --doctest-rst -p no:warnings
 markers =
     online: marks this test function as needing online connectivity.
     figure: marks this test function as using hash-based Matplotlib figure verification. This mark is not meant to be directly applied, but is instead automatically applied when a test function uses the @sunpy.tests.helpers.figure_test decorator.
