--- a/setup.cfg
+++ b/setup.cfg
@@ -13,13 +13,11 @@ python_requires = ">=3.6"
 [options]
 packages = find:
 include_package_data = True
+setup_requires = setuptools_scm
 install_requires =
   sunpy>=1.0.3
   astropy>=3.1
   matplotlib>=2
-setup_requires = setuptools_scm
-zip_safe = False
-use_2to3 = False
 
 [options.extras_require]
 tests =
@@ -35,22 +33,12 @@ docs =
   towncrier
 
 [options.package_data]
-ndcube = data/*
-ndcube.tests = coveragerc
-
-[build_sphinx]
-source-dir = docs
-build-dir = docs/_build
-all_files = 1
+ndcube.data = *
 
 [build_docs]
 source-dir = docs
 build-dir = docs/_build
 all_files = 1
-
-[upload_docs]
-upload-dir = docs/_build/html
-show-response = 1
 
 [tool:pytest]
 minversion = 3.1
