--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@ isolated_build = True
 setenv =
     MPLBACKEND = agg
     COLUMNS = 180
-    PYTEST_COMMAND = pytest --cov=ndcube --cov-config={toxinidir}/setup.cfg --verbose -m "not figure" {toxinidir}/docs ./ndcube
+    PYTEST_COMMAND = pytest --cov=ndcube --cov-config={toxinidir}/setup.cfg --verbose -m "not figure"
 extras = all,tests
 deps =
     sunpydev: git+https://github.com/sunpy/sunpy
@@ -24,9 +24,11 @@ deps =
     pycodestyle
 commands = pycodestyle ndcube --count
 
+
 [testenv:build_docs]
+basepython = python3.7
+changedir = {toxinidir}
+extras = dev
 setenv =
     HOME = {envtmpdir}
-basepython = python3.7
-extras = all,docs
 commands = sphinx-build docs docs/_build/html -W -b html
