--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,6 +4,8 @@ variables:
   CI_BUILD_ID: $(Build.BuildId)
   # These will need to be changed  for your project.
   CI_BUILD_URL: "https://dev.azure.com/sunpy/ndcube/_build/results?buildId=$(Build.BuildId)"
+  CIBW_BUILD: cp36-* cp37-*
+  CIBW_SKIP: "*-win32 *-manylinux1_i686"
 
 # These resources need to be setup on the Azure Pipeline website
 # as a service connection (if it has not been already).
@@ -13,7 +15,7 @@ resources:
     type: github
     endpoint: sunpy
     name: sunpy/azure-pipelines-template
-    ref: master
+    ref: pypi_no_wheels
 
 trigger:
   tags:
@@ -66,4 +68,6 @@ jobs:
   - template: publish-pypi.yml@sunpy
     parameters:
       external_feed: 'PyPI'
+      targets:
+        - sdist
       dependsOn: [Linux_37_offline,Windows_36_offline,macOS_37_online]
