--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,13 +1,36 @@
-# All files in ndcube/ should be included in package_data in setup.cfg
+# All files in sunpy/ should be included in package_data in setup.cfg
 include ah_bootstrap.py
 include CHANGELOG.rst
 include LICENSE.rst
-include licenses/*.rst
 include pyproject.toml
 include README.rst
 include RELEASE.rst
 include setup.py
 include setup.cfg
 
-recursive-include astropy_helpers *
-exclude astropy_helpers/.*
+# Include whole folders outside of sunpy/
+recursive-include docs *
+recursive-include examples *
+recursive-include licenses *
+
+# Remove built folders
+prune build
+prune docs/_build
+prune docs/api
+
+# Astropy Helpers
+include astropy_helpers/README.rst
+include astropy_helpers/CHANGES.rst
+include astropy_helpers/LICENSE.rst
+recursive-include astropy_helpers/licenses *
+
+include astropy_helpers/ah_bootstrap.py
+
+recursive-include astropy_helpers/astropy_helpers *.py *.pyx *.c *.h *.rst
+recursive-include astropy_helpers/astropy_helpers.egg-info *
+
+prune astropy_helpers/build
+prune astropy_helpers/astropy_helpers/tests
+
+# Globally exclude compiled files
+global-exclude *.pyc *.o
